src/project/grammar.txt

programm 			-> functionDeclarations main EOF

functionDeclarations -> functionDeclaration functionDeclarations
					 -> eps

main				-> variableDeclarations [output] EOF

variableDeclarations -> variableDeclaration variableDeclarations
					 -> eps

variableDeclaration -> VAL ID ':=' expr

functionDeclaration -> FUN ID parameterList COLON block

parameterList		-> LPARENT ( RPAREN | parameters RPAREN)

parameters			-> ID (',' parameters)*

block				-> variableDeclarations expr SEMICOLON

variableDeclarations -> variableDeclaration variableDeclarations
					 -> eps

expr 				-> term {termRest}

termRest			-> + term
					-> - term
					-> eps
			
term				-> factor {factorRest}

factorRest			-> * factor
					-> / factor
					-> eps
			
factor				-> LPAREN expr RPAREN
					-> ID ( '()' | '(' arguments + ')' )?
					-> NUM
					
arguments 			-> expr ( ',' expr )*
			
output				-> OUT expr
